2012-03-01  Charlie Zender  <zender@uci.edu>

	* Port new file copy/chmod code from ncrename to ncatted

	* Replace multiple instances of hard-coded limit with CPP token NCO_MAX_NBR_USR_INPUT_RETRY

	* NCO 4.1.0 release procedure:
 	Changes since nco-4_0_9: sorts & maps, MD5, chmod
	cd ~/nco;cvs tag -d nco-4_1_0;cvs tag -d nco-4_1_0-1
	cd ~/nco;cvs commit -m "Preparing nco-4.1.0 release"
	cvs tag -c nco-4_1_0;cvs tag -c nco-4_1_0-1

	* Allocate tally array for degenerate averages in nco_var_avg()
	This fixes ncap2 problem. Not sure why ncwa never failed.

	* Add degenerate variables to in.nc for testing nco_var_avg()

	* nco_var_avg() crashes on degenerate arrays sent by ncap2 not ncwa
	ncap2 -O -v -s 'dgn_max=dgn.max()' ~/nco/data/in.nc ~/foo.nc # Fails
	ncwa -O -v dgn_var ~/nco/data/in.nc ~/foo.nc # Succeeds

2012-02-29  Charlie Zender  <zender@uci.edu>

	* Use chmod() C-library call instead of chmod shell-command

	* Fix stat() and chmod() logic in ncrename

	* Increase ncrename diagnostics consistency and verbosity

2012-02-28  Charlie Zender  <zender@uci.edu>

	* Implement chmod so ncrename succeeds when output file is specified and input file is read-only

2012-02-23  Charlie Zender  <zender@uci.edu>

	* Update documentation to include/use new sort/map routines

2012-02-21  Henry Butowsky  <henryb@hush.com>

	* Modified/added following sort functions:
	sort(), asort() -sort ascending with/without map
	dsort() sort descending with/without map
	remap() apply sort map to variable
	unmap() return variable that produced current variable using sort map
	invert_map() invert the mapping

2012-02-20  Charlie Zender  <zender@uci.edu>

	* Implement MD5_DIGEST in nco_msa_prn_var_val() so MD5 now active
	in all forms of ncks.

	* Clean-up nco_md5.[ch], mark TODO nco1027 and nco485 as done

	* MD5 optionally enabled (with --md5) for input on ncks, ncrcat, ncecat
	When so enabled, MD5 comparisons to output are automatic with ncrcat, ncecat
